deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebrew
  namespace: homebrew
spec:
  selector:
    app: homebrew
  ports:
    - name: http
      port: 80
      targetPort: http
